# DeepLearningFromScratch

./: .gitignore
cpp/: CMakeLists.txt
cpp/api/: CMakeLists.txt
cpp/api/src/: CMakeLists.txt  cpu_vector_ops.cpp  cuda_kernels.cu  cuda_kernels.h
cpp/include/: include.md
cpp/lib/: CMakeLists.txt  lib.md
cpp/lib/src/: CMakeLists.txt  src.md
cpp/lib/src/activations/: SPECS.md
cpp/lib/src/error_functions/: losses.cpp  spec.md
cpp/lib/src/layers/: SPECS.md
cpp/lib/src/ops/: SPECS.md
cpp/lib/src/ops_cuda/: SPECS.md  gpu_vector_ops.cu  main.cpp  vector_ops.h
cpp/lib/src/optimisers/: SPECS.md
cpp/lib/tests/: CMakeLists.txt  tests.md
cpp/train/: train.md
python/: python.md
